// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 1`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 2`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 3`] = `"- update "zowe.runtimeDirectory" with value: /a/b/c"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 4`] = `
"- update "zowe.notexist" with value: /a/b/c
  * Exit code: 1
  * Output:
    - update zowe config PARMLIB(TEST.DATASET.PFX.PRMTST(ZWECONF)), key: "zowe.notexist" with value: /a/b/c, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        unspecified additional property not allowed: 'notexist' at '/zowe/notexist'
Error ZWEL0138E: Failed to update key zowe.notexist of file PARMLIB(TEST.DATASET.PFX.PRMTST(ZWECONF))."
`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 5`] = `
"- update "zowe.setup.jcl.enable" with value: badvalue
  * Exit code: 1
  * Output:
    - update zowe config PARMLIB(TEST.DATASET.PFX.PRMTST(ZWECONF)), key: "zowe.setup.jcl.enable" with value: badvalue, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Validity Exceptions(s) with object at /zowe/setup/jcl
            type 'string' not permitted at /zowe/setup/jcl/enable; expecting type 'boolean'
Error ZWEL0138E: Failed to update key zowe.setup.jcl.enable of file PARMLIB(TEST.DATASET.PFX.PRMTST(ZWECONF))."
`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 6`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 7`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 8`] = `"- update "zowe.runtimeDirectory" with value: /a/b/c"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 9`] = `
"- update "zowe.notexist" with value: /a/b/c
  * Exit code: 1
  * Output:
    - update zowe config FILE(/test/dir/zowe.test.yaml), key: "zowe.notexist" with value: /a/b/c, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        unspecified additional property not allowed: 'notexist' at '/zowe/notexist'
Error ZWEL0138E: Failed to update key zowe.notexist of file FILE(/test/dir/zowe.test.yaml)."
`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 10`] = `
"- update "zowe.setup.jcl.enable" with value: badvalue
  * Exit code: 1
  * Output:
    - update zowe config FILE(/test/dir/zowe.test.yaml), key: "zowe.setup.jcl.enable" with value: badvalue, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Validity Exceptions(s) with object at /zowe/setup/jcl
            type 'string' not permitted at /zowe/setup/jcl/enable; expecting type 'boolean'
Error ZWEL0138E: Failed to update key zowe.setup.jcl.enable of file FILE(/test/dir/zowe.test.yaml)."
`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 11`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 12`] = `"- update "zowe.setup.jcl.enable" with value: false"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 13`] = `"- update "zowe.runtimeDirectory" with value: /a/b/c"`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 14`] = `
"- update "zowe.notexist" with value: /a/b/c
  * Exit code: 1
  * Output:
    - update zowe config /test/dir/zowe.test.yaml, key: "zowe.notexist" with value: /a/b/c, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        unspecified additional property not allowed: 'notexist' at '/zowe/notexist'
Error ZWEL0138E: Failed to update key zowe.notexist of file /test/dir/zowe.test.yaml."
`;

exports[`unit-updateyaml (SHORT) update_yaml different config syntaxes 15`] = `
"- update "zowe.setup.jcl.enable" with value: badvalue
  * Exit code: 1
  * Output:
    - update zowe config /test/dir/zowe.test.yaml, key: "zowe.setup.jcl.enable" with value: badvalue, and validate: true
      * jqset success
    Error: Validation of update to zowe-update-yaml found invalid JSON Schema data
    Validity Exceptions(s) with object at 
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Validity Exceptions(s) with object at /zowe/setup/jcl
            type 'string' not permitted at /zowe/setup/jcl/enable; expecting type 'boolean'
Error ZWEL0138E: Failed to update key zowe.setup.jcl.enable of file /test/dir/zowe.test.yaml."
`;
